tests/e2e/negative/n0001_type_mismatch.cryo
// @test: type_mismatch
// @expect: compile_fail
// @mode: raw
// @description: Assigning string to int variable should fail
// @tags: types, errors
// @xfail: Type mismatch not caught at compile time in raw mode

namespace NegTypeMismatch;

function main() -> int {
    const x: int = "hello";
    return 0;
}
